feat(thesis): WIP thesis

--- a/docs/thesis/src/wut-thesis.cls
+++ b/docs/thesis/src/wut-thesis.cls
@@ -507,3 +507,5 @@
     \lstlistoflistings
     \addcontentsline{toc}{section}{\lstlistlistingname}
 }
+
+\renewcommand{\lstlistingname}{Wycinek kodu}
