feat(thesis): WIP thesis

--- a/docs/thesis/bibliografia.bib
+++ b/docs/thesis/bibliografia.bib
@@ -159,3 +159,18 @@
   title        = {Opis architektury heksagonalnej},
   howpublished = {Dostęp zdalny (13.12.2023): \url{https://alistair.cockburn.us/hexagonal-architecture}}
 }
+
+@misc{typescript,
+  title        = {Strona internetowa języka TypeScript},
+  howpublished = {Dostęp zdalny (16.12.2023): \url{https://www.typescriptlang.org}}
+}
+
+@misc{react,
+  title        = {Dokumentacja biblioteki React},
+  howpublished = {Dostęp zdalny (16.12.2023): \url{https://react.dev}}
+}
+
+@misc{remix,
+  title        = {Strona internetowa biblioteki Remix},
+  howpublished = {Dostęp zdalny (16.12.2023): \url{https://remix.run}}
+}
